# taskbraid

./: .$model.drawio.dtmp  .gitignore  README.md  README.norg  model.drawio  taskbraid.norg
python/calendegg.deprec/calendegg/: pyproject.toml
python/calendegg.deprec/calendegg/notebooks/: Untitled1.ipynb
python/circle-cal/: Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  pyproject.toml
python/circlecal/: Example.ipynb  SB.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  cctesting.ipynb  circle_year-Copy1.ipynb  circle_year-polar.ipynb  circle_year.ipynb  latest_circle_year.ipynb  pyproject.toml  test.py
python/circlecal/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  cctesting-checkpoint.ipynb  circle_year-polar-checkpoint.ipynb  latest_circle_year-checkpoint.ipynb
python/circlecal/circle_cal/: __init__.py  circle_cal.py  model.py  newmodel.py  plot.py  test_model.py  utils.py
python/tbdoist/: Untitled.ipynb  Untitled1.ipynb  pyproject.toml  pyproject.toml.old  tdoist_to_timeline.ipynb
python/tbdoist/tbdoist/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  correct recursive tree.ipynb  modify.py  tbdoist.py  tdgraph.ipynb  test_class_wrap.py
python/tbdoist/tbdoist/.ipynb_checkpoints/: correct recursive tree-checkpoint.ipynb  tdgraph-checkpoint.ipynb
python/tbtw/: Untitled.ipynb  pyproject.toml
python/timeline/: Master.aeon  Untitled 4.csv  Untitled.ipynb  gcal_to_timeline.ipynb  pyproject.toml  text.csv
todoist-view/: main.py  pyproject.toml
todoist-view/todoist-view/: test_click.py  todoist-view.py
