[tool.poetry]
name = "tbdoist"
version = "0.1.0"
description = ""
authors = ["Metaphysica <metaphysica@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
todoist-api-python = "^2.1.3"
typer = {extras = ["all"], version = "^0.9.0"}
networkx = "^3.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
