[tool.poetry]
name = "tbtw"
version = "0.1.0"
description = ""
authors = ["Keith W. Davis <kwdprof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.6"
networkx = "^3.3"
tasklib = "^2.5.1"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
