[tool.poetry]
name = "timeline"
version = "0.1.0"
description = ""
authors = ["Keith W. Davis <kdavis10@nd.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
gcsa = "^2.4.0"
pandas = "^2.2.3"
numpy = "^2.1.1"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
