[tool.poetry]
name = "calendegg"
version = "0.1.0"
description = ""
authors = ["Keith W. Davis <kwdprof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14.1"
xarray = "^2023.10.1"
numpy = "^1.26.2"
rich = "^13.7.0"
jupyterlab = "^4.0.8"
skyfield = "^1.46"
dateparser = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
